force-app/main/default/objects/Account/fields/Active_Loan_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Loan_Count__c</fullName>
    <inlineHelpText>A count of all Active Loans under the Account.   Used for filtering the ELFI Portfolio reports to only Accounts with Active Loans.</inlineHelpText>
    <label>Active Loan Count</label>
    <summaryFilterItems>
        <field>Opportunity.Stage_Status__c</field>
        <operation>equals</operation>
        <value>Active, Partial Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>