force-app/main/default/objects/Account/fields/Assessment_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Loan_Number__c</fullName>
    <label>Assessment Loan Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>