force-app/main/default/objects/Account/fields/Assignment_1st_Notice__c.field-meta.xml
<CustomField>
    <fullName>Assignment_1st_Notice__c</fullName>
    <label>Assignment 1st Notice</label>
    <type>Date</type>
</CustomField>