force-app/main/default/objects/Account/fields/Assignment_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Follow_Up__c</fullName>
    <label>Assignment Follow Up</label>
    <type>Date</type>
</CustomField>