force-app/main/default/objects/Account/fields/Banking_Details_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Banking_Details_Bank_Name__c</fullName>
    <description>Payout Banking Details</description>
    <formula>$Setup.Banking_Details__c.Bank_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banking Details: Bank Name</label>
    <type>Text</type>
</CustomField>