force-app/main/default/objects/Account/fields/Banking_Details_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Banking_Details_Beneficiary_Name__c</fullName>
    <description>Payout Banking Details</description>
    <formula>IF(ISPICKVAL(Business_Unit__c, &quot;Rhino&quot;), $Setup.Banking_Details__c.Rhino_Beneficiary_Name__c, IF(ISPICKVAL(Business_Unit__c, &quot;Seahold&quot;),$Setup.Banking_Details__c.Seahold_Beneficiary_Name__c,$Setup.Banking_Details__c.ELFI_Beneficiary_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banking Details: Beneficiary Name</label>
    <type>Text</type>
</CustomField>