force-app/main/default/objects/Account/fields/Banking_Details_Branch__c.field-meta.xml
<CustomField>
    <fullName>Banking_Details_Branch__c</fullName>
    <description>Payout Banking Details</description>
    <formula>$Setup.Banking_Details__c.Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banking Details: Branch</label>
    <type>Text</type>
</CustomField>