force-app/main/default/objects/Account/fields/Banking_Details_Institution__c.field-meta.xml
<CustomField>
    <fullName>Banking_Details_Institution__c</fullName>
    <description>Payout Banking Details</description>
    <formula>$Setup.Banking_Details__c.Institution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banking Details: Institution #</label>
    <type>Text</type>
</CustomField>