force-app/main/default/objects/Account/fields/Collections_Date__c.field-meta.xml
<CustomField>
    <fullName>Collections_Date__c</fullName>
    <label>Collections Date</label>
    <type>Date</type>
</CustomField>