force-app/main/default/objects/Account/fields/Conga_Assessmnet_Payouts_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Assessmnet_Payouts_URL__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&amp;serverUrl=&quot;&amp;
$Api.Partner_Server_URL_370 &amp;
&quot;&amp;Id=&quot;&amp; Id &amp;
&quot;&amp;QueryId=[AccOppty]a0p0L00000KAmxgQAD?pv0=&quot;&amp; Id &amp; &quot;,&quot;&amp;
&quot;[AccTrans]a0p0L00000KAmxlQAD?pv0=&quot;&amp; Id &amp; &quot;,&quot;&amp;
&quot;[AccTransTreatment]a0p0L00000KAmxqQAD?pv0=&quot;&amp; Id &amp;
&quot;&amp;TemplateId=&quot; &amp; IF( ISPICKVAL( Business_Unit__c , &quot;Rhino&quot;) , &quot;a0x0L00000PEzSeQAL&quot;, IF( ISPICKVAL( Business_Unit__c , &quot;Seahold&quot;), &quot;a0x0L00000QCQoJQAX&quot;, &quot;a0x0L00000PEzT5QAL&quot;)) &amp; &quot;&amp;DS7=3&amp;DefaultPDF=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Assessmnet Payouts URL</label>
    <type>Text</type>
</CustomField>