force-app/main/default/objects/Account/fields/Conga_Batch_Assessment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Conga_Batch_Assessment_Provider__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; &amp;
&quot;&amp;id=&quot; &amp; Id &amp;
&quot;&amp;queryid=[LawFirmActiveClients]a0p0L00000KAmwdQAD&quot; &amp;
&quot;?pv0=&quot; &amp; Id &amp;
&quot;~pv1%3D&quot; &amp; $Setup.Assessment_Provider_Summary_Report__c.Business_Unit__c &amp;
&quot;,[aggregate]a0p0L00000KAmwnQAD&quot;&amp;
&quot;%3Fpv0%3D&quot; &amp; Id &amp;
&quot;~pv1%3D&quot; &amp; $Setup.Assessment_Provider_Summary_Report__c.Business_Unit__c &amp;
&quot;&amp;templateid=&quot; &amp; IF($Setup.Assessment_Provider_Summary_Report__c.Business_Unit__c = &quot;Rhino&quot;, &quot;a0x0L00000PEzSAQA1&quot;, &quot;a0x0L00000PEzSoQAL&quot;) &amp;
&quot;&amp;defaultpdf=1&quot; &amp;
&quot;&amp;attachmentparentid=&quot; &amp; Id &amp;
&quot;&amp;ac0=1&quot; &amp;
&quot;&amp;sc0=1&quot; &amp;
&quot;&amp;sc1=SalesforceFile&quot; &amp;
&quot;&amp;DS7=5&quot; &amp;
&quot;&amp;qmode=Attachments&quot; &amp;
&quot;&amp;returnpath=/lightning/n/Assessment_Loans?0.source=alohaHeader&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Batch Assessment Provider</label>
    <type>Text</type>
</CustomField>