force-app/main/default/objects/Account/fields/Conga_Batch_Assessment_Provider_PDF__c.field-meta.xml
<CustomField>
    <fullName>Conga_Batch_Assessment_Provider_PDF__c</fullName>
    <formula>Conga_Batch_Assessment_Provider__c &amp; &quot;&amp;defaultpdf=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Batch Assessment Provider PDF</label>
    <type>Text</type>
</CustomField>