force-app/main/default/objects/Account/fields/Conga_Batch_Law_Firm_Summary__c.field-meta.xml
<CustomField>
    <fullName>Conga_Batch_Law_Firm_Summary__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; &amp; 
&quot;&amp;id=&quot; &amp; Id &amp;
&quot;&amp;queryid=&quot; &amp; IF($Setup.Conga_batch_setting__c.Query_Selector_Law_Firm_Report__c  = &quot;Active&quot;, &quot;[LawFirmActiveClients]a0p0L00000JZyGL&quot;,&quot;[LawFirmAllClients]a0p0L00000JZyGB&quot;) &amp; &quot;?pv0=&quot; &amp; Id &amp;
&quot;~pv1%3D&quot;&amp; $Setup.Conga_batch_setting__c.Business_Unit_Lawfirm_Summary__c &amp;
&quot;~pv2%3D&quot;&amp; IF($Setup.Conga_batch_setting__c.Type_of_Loan_Law_Firm__c = &apos;&apos;, &quot;&apos;Facility Loan&apos;|&apos;Lump-Sum&apos;|&apos;Treatment Loan&apos;|&apos;Treatment Loan 2&apos;|&apos;Assessment&apos;|&apos;Lawyer Loan&apos;&quot;, $Setup.Conga_batch_setting__c.Type_of_Loan_Law_Firm__c) &amp;
&quot;&amp;templateid=&quot; &amp;  IF( $Setup.Conga_batch_setting__c.Business_Unit_Lawfirm_Summary__c = &quot;Rhino&quot;, &quot;a0x0L00000PH6QNQA1&quot;,IF( $Setup.Conga_batch_setting__c.Business_Unit_Lawfirm_Summary__c = &quot;Seahold&quot;, &quot;a0x0L00000QCQoTQAX&quot;, &quot;a0x0L00000PVUBiQAP&quot;)) &amp; 
&quot;&amp;defaultpdf=1&quot; &amp; 
&quot;&amp;attachmentparentid=&quot; &amp; Id &amp;
&quot;&amp;ac0=1&quot; &amp; 
&quot;&amp;sc0=1&quot; &amp; 
&quot;&amp;sc1=SalesforceFile&quot; &amp; 
&quot;&amp;qmode=Attachments&quot; &amp;
&quot;&amp;returnpath=/lightning/n/Custom_Reports?0.source=alohaHeader&quot;</formula>
    <label>Conga Batch Law Firm Summary</label>
    <type>Text</type>
</CustomField>