force-app/main/default/objects/Account/fields/Conga_Batch_Law_Firm_Summary_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Conga_Batch_Law_Firm_Summary_Send_Email__c</fullName>
    <formula>SUBSTITUTE(  Conga_Batch_Law_Firm_Summary__c , &quot;&amp;qmode=Attachments&quot;, &quot;&amp;qmode=SendEmail&quot;)  &amp;
&quot;&amp;CongaEmailTemplateId=a0o19000001Nijb&quot;&amp;
&quot;&amp;EmailToId=&quot;&amp; BLANKVALUE( $Setup.Conga_batch_setting__c.Test_Recipient_of_Lawyer_Summary__c ,   $Setup.Conga_batch_setting__c.Email_To_Id_Law_Firm_Summary__c)</formula>
    <label>Conga Batch Law Firm Summary Send Email</label>
    <type>Text</type>
</CustomField>