force-app/main/default/objects/Account/fields/Date_of_Advance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Advance__c</fullName>
    <label>Date of Advance</label>
    <summarizedField>Opportunity.Date_of_advance__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Include_In_Portfolio_Report__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>