force-app/main/default/objects/Account/fields/Date_of_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_of_sent__c</fullName>
    <label>Date of sent</label>
    <type>Date</type>
</CustomField>