force-app/main/default/objects/Account/fields/Drawdown_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Total_Amount__c</fullName>
    <label>Drawdown Total Amount</label>
    <summarizedField>Opportunity.Drawdown_Total__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>