force-app/main/default/objects/Account/fields/Ending_Balance_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance_To_Date__c</fullName>
    <label>Ending Balance To Date</label>
    <summarizedField>Opportunity.Ending_Balance_To_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>