force-app/main/default/objects/Account/fields/Exclude_from_Payout__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Payout</label>
    <type>Checkbox</type>
</CustomField>