force-app/main/default/objects/Account/fields/File_No_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>File_No_From_Lead__c</fullName>
    <label>File No From Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>