force-app/main/default/objects/Account/fields/General_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>General_Business_Number__c</fullName>
    <label>General Business Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>