force-app/main/default/objects/Account/fields/Is_Async_Processing__c.field-meta.xml
<CustomField>
    <fullName>Is_Async_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Async Processing</label>
    <type>Checkbox</type>
</CustomField>