force-app/main/default/objects/Account/fields/Is_Reserve_Applied__c.field-meta.xml
<CustomField>
    <fullName>Is_Reserve_Applied__c</fullName>
    <formula>Reserved_Loans_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reserve Applied</label>
    <type>Checkbox</type>
</CustomField>