force-app/main/default/objects/Account/fields/Judgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Date__c</fullName>
    <label>Judgement Date</label>
    <type>Date</type>
</CustomField>