force-app/main/default/objects/Account/fields/Lawyer_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Loan_Number__c</fullName>
    <label>Lawyer Loan Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>