force-app/main/default/objects/Account/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <label>Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>