force-app/main/default/objects/Account/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <formula>IF(
 No_of_Assessment_Loans__c &gt; 0,
&apos;Assessment&apos;,
IF(No_of_Lawyer_Loans__c &gt; 0,
&apos;Lawyer&apos;,
&apos;Settlement&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Type</label>
    <type>Text</type>
</CustomField>