force-app/main/default/objects/Account/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>IF(CONTAINS( TRIM(Name)   , &apos;- Account # &apos;),  SUBSTITUTE(Name, &apos;- Account # &apos;, &apos;- 0000&apos;),  IF(CONTAINS( TRIM(Name)   , &apos;-Account # &apos;), SUBSTITUTE(Name, &apos;-Account # &apos;, &apos;- 0000&apos;), IF(CONTAINS( TRIM(Name)   , &apos;- Account #&apos;), SUBSTITUTE(Name, &apos;- Account #&apos;, &apos;- 0000&apos;),  IF(CONTAINS( TRIM(Name)   , &apos;-Account #&apos;), SUBSTITUTE(Name, &apos;-Account #&apos;, &apos;- 0000&apos;), TRIM(Name)) ) ) )</formula>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>