force-app/main/default/objects/Account/fields/No_of_Assessment_Loans__c.field-meta.xml
<CustomField>
    <fullName>No_of_Assessment_Loans__c</fullName>
    <label># of Assessment Loans</label>
    <summaryFilterItems>
        <field>Opportunity.Type_of_Loan__c</field>
        <operation>equals</operation>
        <value>Assessment</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>