force-app/main/default/objects/Account/fields/Notice_of_assignment__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_assignment__c</fullName>
    <label>Notice of assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>