force-app/main/default/objects/Account/fields/Offer_to_Settle_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_to_Settle_Amount__c</fullName>
    <label>Offer to Settle Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>