force-app/main/default/objects/Account/fields/Offers_to_Settle__c.field-meta.xml
<CustomField>
    <fullName>Offers_to_Settle__c</fullName>
    <label>Offers to Settle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>