force-app/main/default/objects/Account/fields/Old_Projected_Loan_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Projected_Loan_Value__c</fullName>
    <label>Old Projected Loan Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>