force-app/main/default/objects/Account/fields/Outstanding_Balance_With_Reserve_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_With_Reserve_To_Date__c</fullName>
    <label>Outstanding Balance With Reserve To Date</label>
    <summarizedField>Opportunity.Ending_Balance_To_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Outstanding_Balance_as_of_To_Date__c</field>
        <operation>greaterThan</operation>
        <value>0.0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Include_In_Portfolio_Report__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>